Solved Jumping Jack Problem

--- a/checklist.css
+++ b/checklist.css
@@ -75,11 +75,12 @@ padding-left:35px;
         box-shadow:none;
 }
 input[type="checkbox"]{
-position:absolute;
+/* position:absolute; */
 height:0;
 width:0;
 opacity:0;
 top:-600px;
+display: none;
 }
 .todo{
 display:inline-block;
@@ -156,6 +157,7 @@ width:100%;
 -webkit-box-shadow:inset 0 0 0 2px #0eb0b7;
    -moz-box-shadow:inset 0 0 0 2px #0eb0b7;
         box-shadow:inset 0 0 0 2px #0eb0b7;
+        
 }
 :checked + .todo .fa-check{
 font-size:20px;
